[metadata]
name = designate-solidserver-backend
version = 1.0.0
summary = SOLIDserver DNS backend for Designate
description-file = README.rst
author = Your Organization
author-email = support@example.com
url = https://github.com/example/designate-solidserver-backend
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages = 
    solidserver_backend

[entry_points]
designate.backend =
    solidserver = solidserver_backend:SolidServerBackend
